--- a/index.html
+++ b/index.html
@@ -20,6 +20,30 @@
     <main>
         <h2>Welcome to the Temple Album</h2>
         <p>Explore famous temples around the world with images and descriptions.</p>
+
+        <!-- Example images with lazy loading -->
+        <section class="temple-images">
+            <img src="images/salt-lake-temple.jpeg" alt="Salt Lake Temple" loading="lazy">
+            <img src="images/temple-2.jpg" alt="Temple 2" loading="lazy">
+            <img src="images/temple-3.jpg" alt="Temple 3" loading="lazy">
+        </section>
+
+        <!-- Contact form -->
+        <section class="contact-form">
+            <h3>Contact Us</h3>
+            <form id="contactForm">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+
+                <button type="submit">Submit</button>
+            </form>
+        </section>
     </main>
 
     <footer>
