Added images for w06 Project

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <!-- Example images with lazy loading -->
         <section class="temple-images">
             <img src="images/salt-lake-temple.jpeg" alt="Salt Lake Temple" loading="lazy">
-            <img src="images/temple-2.jpg" alt="Temple 2" loading="lazy">
-            <img src="images/temple-3.jpg" alt="Temple 3" loading="lazy">
+            <img src="images/temple-2.jpeg" alt="Temple 2" loading="lazy">
+            <img src="images/temple-3.jpeg" alt="Temple 3" loading="lazy">
         </section>
 
         <!-- Contact form -->
